# gl-junk

./: .gitignore
eva/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
glad/include/glad/: glad.h
glad/src/: glad.c
lib/glew-2.1.0/: glew.pc
particle-simulator/: Makefile  particles.cpp
truchet/: CMakeLists.txt  Makefile  truchet  truchet.cpp
turing-patterns/: CMakeLists.txt  Makefile  main.cpp  texture.fs  tp.cpp  turing.cs
tutorial/: Makefile  a.cpp  basic-window.cpp
waves/: CMakeLists.txt  main.cpp  texture.fs  texture.vs  waves.cs
